Explicitly set pro version ad width to prevent it from wrapping in Chrome.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@818849 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -900,6 +900,8 @@ select.ws_dropdown optgroup option {
 }
 
 #ws_sidebar_pro_ad {
+    width: 225px;
+
 	margin-top: 5px;
 	margin-left: 3px;
 
